--- a/webview-ui/src/i18n/locales/en/marketplace.json
+++ b/webview-ui/src/i18n/locales/en/marketplace.json
@@ -36,7 +36,6 @@
 		}
 	},
 	"type-group": {
-		"match": "Match",
 		"modes": "Modes",
 		"mcps": "MCP Servers",
 		"prompts": "Prompts",
@@ -53,6 +52,7 @@
 		},
 		"count": "{{count}} items found",
 		"components": "{{count}} components",
+		"matched": "{{count}} matched",
 		"refresh": {
 			"button": "Refresh",
 			"refreshing": "Refreshing...",
