--- a/webview-ui/src/i18n/locales/zh-CN/marketplace.json
+++ b/webview-ui/src/i18n/locales/zh-CN/marketplace.json
@@ -3,9 +3,10 @@
 	"tabs": {
 		"installed": "已安装",
 		"settings": "设置",
-		"browse": "浏览",
-		"sources": "来源"
+		"browse": "浏览"
 	},
+	"done": "完成",
+	"refresh": "刷新",
 	"filters": {
 		"search": {
 			"placeholder": "搜索市场项目..."
@@ -52,6 +53,7 @@
 		},
 		"count": "找到 {{count}} 个项目",
 		"components": "{{count}} 个组件",
+		"matched": "{{count}} 个匹配",
 		"refresh": {
 			"button": "刷新",
 			"refreshing": "正在刷新...",
@@ -62,7 +64,7 @@
 			"from": "来自：{{source}}",
 			"installProject": "安装",
 			"installGlobal": "安装（全局）",
-			"removeProject": "移除（项目）",
+			"removeProject": "移除",
 			"removeGlobal": "移除（全局）",
 			"viewSource": "查看",
 			"viewOnSource": "在 {{source}} 上查看",
@@ -72,34 +74,31 @@
 	"installProjectTooltip": "项目安装",
 	"sources": {
 		"title": "市场来源",
-		"description": "添加或管理 Marketplace 项目的来源。每个来源都是包含 Marketplace 项目定义的 Git 存储库。",
+		"description": "添加包含市场项目的 Git 仓库。浏览市场时将获取这些仓库。",
 		"add": {
 			"title": "添加新来源",
-			"urlPlaceholder": "Git 仓库 URL（例如 'https://github.com/user/repo.git'）",
-			"urlFormats": "支持的格式：HTTPS、SSH 或本地文件路径。",
-			"namePlaceholder": "可选来源名称（例如 '我的私有仓库'）",
+			"urlPlaceholder": "Git 仓库 URL (例如 https://github.com/username/repo)",
+			"urlFormats": "支持的格式：HTTPS (https://github.com/username/repo)、SSH (git@github.com:username/repo.git) 或 Git 协议 (git://github.com/username/repo.git)",
+			"namePlaceholder": "显示名称 (最多 20 个字符)",
 			"button": "添加来源"
 		},
 		"current": {
 			"title": "当前来源",
-			"empty": "尚未添加任何 Marketplace 来源。",
-			"emptyHint": "在上方添加一个来源以浏览 Marketplace 项目。",
-			"refresh": "刷新来源",
+			"empty": "未配置任何来源。添加来源以开始。",
+			"refresh": "刷新此来源",
 			"remove": "移除来源"
 		},
 		"errors": {
-			"maxSources": "最多允许 {{max}} 个来源。",
-			"emptyUrl": "URL 不能为空。",
-			"nonVisibleChars": "URL 包含不可见字符。",
-			"invalidGitUrl": "无效的 Git URL 格式。",
+			"emptyUrl": "URL 不能为空",
 			"invalidUrl": "无效的 URL 格式",
-			"duplicateUrl": "具有此 URL 的来源已存在。",
-			"nameTooLong": "名称不得超过 20 个字符。",
-			"nonVisibleCharsName": "名称包含不可见字符。",
-			"duplicateName": "具有此名称的来源已存在。",
-			"emojiName": "表情符号可能导致显示问题。"
+			"nonVisibleChars": "URL 包含除空格外的不可见字符",
+			"invalidGitUrl": "URL 必须是有效的 Git 仓库 URL (例如 https://github.com/username/repo)",
+			"duplicateUrl": "此 URL 已在列表中 (不区分大小写和空格)",
+			"nameTooLong": "名称必须为 20 个字符或更少",
+			"nonVisibleCharsName": "名称包含除空格外的不可见字符",
+			"duplicateName": "此名称已被使用 (不区分大小写和空格)",
+			"emojiName": "表情符号可能导致显示问题",
+			"maxSources": "最多允许 {{max}} 个来源"
 		}
-	},
-	"done": "完成",
-	"refresh": "刷新"
+	}
 }
