--- a/webview-ui/src/i18n/locales/ja/marketplace.json
+++ b/webview-ui/src/i18n/locales/ja/marketplace.json
@@ -3,9 +3,10 @@
 	"tabs": {
 		"installed": "インストール済み",
 		"settings": "設定",
-		"browse": "ブラウズ",
-		"sources": "ソース"
+		"browse": "ブラウズ"
 	},
+	"done": "完了",
+	"refresh": "更新",
 	"filters": {
 		"search": {
 			"placeholder": "マーケットプレイスのアイテムを検索..."
@@ -30,8 +31,8 @@
 			"placeholder": "タグを検索して選択...",
 			"noResults": "一致するタグが見つかりません",
 			"clickToFilter": "タグをクリックしてアイテムをフィルター",
-			"clear": "{{count}}個の選択されたタグをクリア",
-			"selected": "{{count}}個の選択されたタグ"
+			"clear": "タグをクリア ({{count}})",
+			"selected": "選択されたタグのいずれかを持つアイテムを表示中 ({{count}}個選択済み)"
 		}
 	},
 	"type-group": {
@@ -50,8 +51,9 @@
 			"adjustFilters": "フィルターまたは検索語を調整してみてください",
 			"clearAllFilters": "すべてのフィルターをクリア"
 		},
-		"count": "{{count}}個のアイテム",
+		"count": "{{count}}個のアイテムが見つかりました",
 		"components": "{{count}}個のコンポーネント",
+		"matched": "{{count}}個一致",
 		"refresh": {
 			"button": "更新",
 			"refreshing": "更新中...",
@@ -72,34 +74,31 @@
 	"installProjectTooltip": "プロジェクトのインストール",
 	"sources": {
 		"title": "マーケットプレイスソース",
-		"description": "マーケットプレイスアイテムのソースを追加または管理します。各ソースは、マーケットプレイスアイテムの定義を含むGitリポジトリです。",
+		"description": "マーケットプレイスアイテムを含むGitリポジトリを追加します。これらのリポジトリは、マーケットプレイスを閲覧する際にフェッチされます。",
 		"add": {
 			"title": "新しいソースを追加",
-			"urlPlaceholder": "GitリポジトリのURL (例: 'https://github.com/user/repo.git')",
-			"urlFormats": "サポートされている形式: HTTPS、SSH、またはローカルファイルパス。",
-			"namePlaceholder": "オプションのソース名 (例: 'マイプライベートリポジトリ')",
+			"urlPlaceholder": "GitリポジトリのURL (例: https://github.com/username/repo)",
+			"urlFormats": "サポートされている形式: HTTPS (https://github.com/username/repo)、SSH (git@github.com:username/repo.git)、またはGitプロトコル (git://github.com/username/repo.git)",
+			"namePlaceholder": "表示名 (最大20文字)",
 			"button": "ソースを追加"
 		},
 		"current": {
 			"title": "現在のソース",
-			"empty": "まだMarketplaceソースが追加されていません。",
-			"emptyHint": "Marketplaceアイテムを閲覧するには、上にソースを追加してください。",
-			"refresh": "ソースを更新",
+			"empty": "ソースが設定されていません。開始するにはソースを追加してください。",
+			"refresh": "このソースを更新",
 			"remove": "ソースを削除"
 		},
 		"errors": {
-			"maxSources": "最大{{max}}個のソースが許可されています。",
-			"emptyUrl": "URLは空にできません。",
-			"invalidUrl": "無効なURL形式です。",
-			"nonVisibleChars": "URLに表示されない文字が含まれています。",
-			"invalidGitUrl": "無効なGit URL形式。",
-			"duplicateUrl": "このURLを持つソースはすでに存在します。",
-			"nameTooLong": "名前は20文字を超えることはできません。",
-			"nonVisibleCharsName": "名前に表示されない文字が含まれています。",
-			"duplicateName": "この名前のソースはすでに存在します。",
-			"emojiName": "絵文字は表示上の問題を引き起こす可能性があります。"
+			"emptyUrl": "URLは空にできません",
+			"invalidUrl": "無効なURL形式",
+			"nonVisibleChars": "URLにはスペース以外の非表示文字が含まれています",
+			"invalidGitUrl": "URLは有効なGitリポジトリURLである必要があります (例: https://github.com/username/repo)",
+			"duplicateUrl": "このURLはすでにリストにあります (大文字と小文字、空白を区別しない一致)",
+			"nameTooLong": "名前は20文字以下である必要があります",
+			"nonVisibleCharsName": "名前にスペース以外の非表示文字が含まれています",
+			"duplicateName": "この名前はすでに使用されています (大文字と小文字、空白を区別しない一致)",
+			"emojiName": "絵文字文字は表示の問題を引き起こす可能性があります",
+			"maxSources": "最大{{max}}個のソースが許可されています"
 		}
-	},
-	"done": "完了",
-	"refresh": "更新"
+	}
 }
