--- a/src/i18n/locales/ru/common.json
+++ b/src/i18n/locales/ru/common.json
@@ -53,7 +53,9 @@
 		"cannot_access_path": "Невозможно получить доступ к пути {{path}}: {{error}}",
 		"failed_update_project_mcp": "Не удалось обновить серверы проекта MCP",
 		"settings_import_failed": "Не удалось импортировать настройки: {{error}}.",
-		"mistake_limit_guidance": "Это может указывать на сбой в процессе мышления модели или неспособность правильно использовать инструмент, что можно смягчить с помощью руководства пользователя (например, \"Попробуйте разбить задачу на более мелкие шаги\")."
+		"mistake_limit_guidance": "Это может указывать на сбой в процессе мышления модели или неспособность правильно использовать инструмент, что можно смягчить с помощью руководства пользователя (например, \"Попробуйте разбить задачу на более мелкие шаги\").",
+		"condense_failed": "Не удалось сжать контекст",
+		"condense_context_grew": "Размер контекста увеличился во время сжатия; пропускаем эту попытку"
 	},
 	"warnings": {
 		"no_terminal_content": "Не выбрано содержимое терминала",
