--- a/src/i18n/locales/ca/common.json
+++ b/src/i18n/locales/ca/common.json
@@ -59,6 +59,9 @@
 		"settings_import_failed": "Ha fallat la importació de la configuració: {{error}}.",
 		"mistake_limit_guidance": "Això pot indicar un error en el procés de pensament del model o la incapacitat d'utilitzar una eina correctament, que es pot mitigar amb orientació de l'usuari (p. ex. \"Prova de dividir la tasca en passos més petits\").",
 		"condense_failed": "Ha fallat la condensació del context",
+		"condense_not_enough_messages": "No hi ha prou missatges per condensar el context",
+		"condensed_recently": "El context s'ha condensat recentment; s'omet aquest intent",
+		"condense_handler_invalid": "El gestor de l'API per condensar el context no és vàlid",
 		"condense_context_grew": "La mida del context ha augmentat durant la condensació; s'omet aquest intent"
 	},
 	"warnings": {
