--- a/src/i18n/locales/de/common.json
+++ b/src/i18n/locales/de/common.json
@@ -55,6 +55,9 @@
 		"settings_import_failed": "Fehler beim Importieren der Einstellungen: {{error}}.",
 		"mistake_limit_guidance": "Dies kann auf einen Fehler im Denkprozess des Modells oder die Unfähigkeit hinweisen, ein Tool richtig zu verwenden, was durch Benutzerführung behoben werden kann (z.B. \"Versuche, die Aufgabe in kleinere Schritte zu unterteilen\").",
 		"condense_failed": "Fehler beim Verdichten des Kontexts",
+		"condense_not_enough_messages": "Nicht genügend Nachrichten zum Verdichten des Kontexts",
+		"condensed_recently": "Kontext wurde kürzlich verdichtet; dieser Versuch wird übersprungen",
+		"condense_handler_invalid": "API-Handler zum Verdichten des Kontexts ist ungültig",
 		"condense_context_grew": "Kontextgröße ist während der Verdichtung gewachsen; dieser Versuch wird übersprungen"
 	},
 	"warnings": {
