--- a/src/i18n/locales/es/common.json
+++ b/src/i18n/locales/es/common.json
@@ -55,6 +55,9 @@
 		"settings_import_failed": "Error al importar la configuración: {{error}}.",
 		"mistake_limit_guidance": "Esto puede indicar un fallo en el proceso de pensamiento del modelo o la incapacidad de usar una herramienta correctamente, lo cual puede mitigarse con orientación del usuario (ej. \"Intenta dividir la tarea en pasos más pequeños\").",
 		"condense_failed": "Error al condensar el contexto",
+		"condense_not_enough_messages": "No hay suficientes mensajes para condensar el contexto",
+		"condensed_recently": "El contexto se condensó recientemente; se omite este intento",
+		"condense_handler_invalid": "El manejador de API para condensar el contexto no es válido",
 		"condense_context_grew": "El tamaño del contexto aumentó durante la condensación; se omite este intento"
 	},
 	"warnings": {
