--- a/src/i18n/locales/ja/common.json
+++ b/src/i18n/locales/ja/common.json
@@ -55,6 +55,9 @@
 		"settings_import_failed": "設定のインポートに失敗しました：{{error}}",
 		"mistake_limit_guidance": "これは、モデルの思考プロセスの失敗やツールを適切に使用できないことを示している可能性があり、ユーザーのガイダンスによって軽減できます（例：「タスクをより小さなステップに分割してみてください」）。",
 		"condense_failed": "コンテキストの圧縮に失敗しました",
+		"condense_not_enough_messages": "コンテキストを圧縮するのに十分なメッセージがありません",
+		"condensed_recently": "コンテキストは最近圧縮されました；この試行をスキップします",
+		"condense_handler_invalid": "コンテキストを圧縮するためのAPIハンドラーが無効です",
 		"condense_context_grew": "圧縮中にコンテキストサイズが増加しました；この試行をスキップします"
 	},
 	"warnings": {
