--- a/src/i18n/locales/pl/common.json
+++ b/src/i18n/locales/pl/common.json
@@ -55,6 +55,9 @@
 		"settings_import_failed": "Nie udało się zaimportować ustawień: {{error}}.",
 		"mistake_limit_guidance": "To może wskazywać na błąd w procesie myślowym modelu lub niezdolność do prawidłowego użycia narzędzia, co można złagodzić poprzez wskazówki użytkownika (np. \"Spróbuj podzielić zadanie na mniejsze kroki\").",
 		"condense_failed": "Nie udało się skondensować kontekstu",
+		"condense_not_enough_messages": "Za mało wiadomości do skondensowania kontekstu",
+		"condensed_recently": "Kontekst został niedawno skondensowany; pomijanie tej próby",
+		"condense_handler_invalid": "Nieprawidłowy handler API do kondensowania kontekstu",
 		"condense_context_grew": "Rozmiar kontekstu wzrósł podczas kondensacji; pomijanie tej próby"
 	},
 	"warnings": {
