--- a/src/i18n/locales/zh-TW/common.json
+++ b/src/i18n/locales/zh-TW/common.json
@@ -55,6 +55,9 @@
 		"settings_import_failed": "設定匯入失敗：{{error}}。",
 		"mistake_limit_guidance": "這可能表明模型思維過程失敗或無法正確使用工具，可透過使用者指導來緩解（例如「嘗試將工作分解為更小的步驟」）。",
 		"condense_failed": "壓縮上下文失敗",
+		"condense_not_enough_messages": "沒有足夠的訊息來壓縮上下文",
+		"condensed_recently": "上下文最近已壓縮；跳過此次嘗試",
+		"condense_handler_invalid": "壓縮上下文的 API 處理程式無效",
 		"condense_context_grew": "壓縮過程中上下文大小增加；跳過此次嘗試"
 	},
 	"warnings": {
